--- a/app/locales/en/overlap.json
+++ b/app/locales/en/overlap.json
@@ -1,6 +1,6 @@
 {
   "overlap_title": "Check Overlap",
-  "overlap_para_1": "The green trail represents your location history\n\nThe light purple circles represent the public dataset",
+  "overlap_para_1": "\u27A2 The green trail represents your location history\n\n\u27A2 The light purple circles represent the public dataset",
   "show_overlap": "Click to view the public dataset",
   "loading_public_data": "loading data...",
   "overlap_no_results_button_label": "Public Data Loaded",
