add new reference in the app

--- a/app/locales/en.json
+++ b/app/locales/en.json
@@ -24,12 +24,17 @@
     "home_at_risk_header": "You May Have Intersected",
     "home_at_risk_subsubtext": "This does not mean you are at risk.",
     "home_at_risk_subtext": "Based on your GPS history, it is possible you were in contact with or close to someone.",
+    "home_calculator_URL": "https://www.covidanalytics.io/infection_calculator",
+    "home_calculator_link_heading": "Try out the Risk Calculator",
+    "home_calculator_link_label": "Developed by MIT",
     "home_enable_location": "Enable Location Data",
     "home_mayo_link_heading": "More Information",
     "home_mayo_link_label": "from the Mayo Clinic",
     "home_next_steps": "Find out more",
-    "home_no_contact_header": "Not enough data",
-    "home_no_contact_subtext": "Based on the available data, your movement doesn't show any crossed paths.",
+    "home_no_contact_header": "Logging data securely",
+    "home_no_contact_subtext": "The PrivateKit App is going to be a research App with cutting edge technology. To use the stable and public facing App download ",
+    "home_safepaths_android_url": "https://play.google.com/store/apps/details?id=org.pathcheck.covidsafepaths",
+    "home_safepaths_ios_url": "https://apps.apple.com/us/app/covid-safe-paths/id1508266966",
     "home_unknown_header": "Unknown",
     "home_unknown_subtext": "We can’t tell if you’ve intersected unless you enable the app to access your location.",
     "import_step_1": "1. Login to your Google Account and Download your Location History",
